# REST_API_test_automation_Advanced

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-sw-coverage  README.md  main.py  mypy.ini  project-inventory.md  pyproject.toml  pytest.ini  requirements.txt  swagger-coverage-config-dm-api-reporter.json  telegram-notifier-config.ini  test_post_v1_account.py  to_think_about.md
.github/workflows/: python-tests.yml  python.yml
api_mailhog/apis/: mailhog_api.py
checkers/: get_v1_account_checker.py  http_checkers.py  post_v1_account_checker.py
clients/http/api_mailhog/apis/: mailhog_api.py
clients/http/dm_api_account/: __init__.py
clients/http/dm_api_account/apis/: account_api.py  login_api.py
clients/http/dm_api_account/models/: api_models.py  bad_request_error.py  change_email.py  change_password.py  general_error.py  login_credentials.py  problem_details.py  registration.py  reset_password.py  user_details_envelope.py  user_envelope.py
clients/http/rest_client/: client_async.py
clients/http/schemas/: dm_api_account.json
codegen_templates/: api_client.jinja2  apis_init.jinja2  header.jinja2
config/: prod.yaml
dm_api_account/apis/: account_api.py  login_api.py
dm_api_account/models/: bad_request_error.py  general_error.py  login_credentials.py  problem_details.py  reset_password.py  user_details_envelope.py  user_envelope.py
helpers/: account_helper.py
restclient/: client.py  configuration.py  utilities.py
services/: api_mailhog.py  dm_api_account.py
swagger/: swagger_account.json
tests/: conftest.py  user.py
tests/functional/account_service/account/: test_get_v1_account.py  test_post_v1_account.py  test_put_v1_account_email.py  test_put_v1_account_password.py  test_put_v1_account_token.py
tests/functional/account_service/login/: test_delete_v1_account_login.py  test_delete_v1_account_login_all.py  test_post_v1_login.py
tests/functional/post_v1_account/: test_ch1_hw1.py  test_post_v1_account.py  test_post_v1_account_base.py
tg_notifier/: bot.py
