[project]
name = "rest-api-test-automation-advanced"
version = "0.1.0"
description = ""
authors = [
    {name = "Artsiom Kapset"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp (==3.14.1)",
    "allure-pytest (==2.16.0)",
    "assertpy (==1.1)",
    "curlify (==3.0.0)",
    "distconfig3 (==1.0.1)",
    "environs (==15.0.1)",
    "faker (==40.28.1)",
    "marshmallow (==4.3.0)",
    "pydantic (==2.13.4)",
    "pyhamcrest (==2.1.0)",
    "pytelegrambotapi (==4.34.0)",
    "pytest (==9.1.0)",
    "pytest-telegram-notifier (==1.4.0)",
    "python-dotenv (==1.2.2)",
    "pyyaml (==6.0.3)",
    "requests (==2.34.2)",
    "retrying (==1.4.2)",
    "rootpath (==0.1.0)",
    "setuptools (==83.0.0)",
    "structlog (==26.1.0)",
    "swagger-coverage (==3.5.2)",
    "toml (==0.10.2)",
    "vyper-config (==1.2.1)",
    "watchdog (==6.0.0)",
    "six (==1.17.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
