[project]
name = "rest-api-test-automation-advanced"
version = "0.1.0"
description = ""
authors = [
    {name = "Artsiom Kapset"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "aiohttp (==3.14.1)",
    "allure-pytest (==2.16.0)",
    "assertpy (==1.1)",
    "distconfig3 (==1.0.1)",
    "environs (==15.0.1)",
    "faker (==40.28.1)",
    "marshmallow (==4.3.0)",
    "pydantic (==2.13.4)",
    "pyhamcrest (==2.1.0)",
    "pytelegrambotapi (==4.34.0)",
    "pytest (==9.1.0)",
    "pytest-telegram-notifier (==1.4.0)",
    "python-dotenv (==1.2.2)",
    "pyyaml (==6.0.3)",
    "retrying (==1.4.2)",
    "rootpath (==0.1.0)",
    "setuptools (==83.0.0)",
    "structlog (==26.1.0)",
    "swagger-coverage (==3.5.2)",
    "toml (==0.10.2)",
    "vyper-config (==1.2.1)",
    "watchdog (==6.0.0)",
    "six (==1.17.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "curlify2 (>=2.0.0,<3.0.0)",
    "rest-client @ git+https://github.com/SDET-org/rest_client.git@main",
    "restcodegen (>=2.0.1,<3.0.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
addopts = "--alluredir=allure-results"
# Telegram notifications (disabled by default; the plugin blocks when unconfigured):
#   --telegram-notifier
#   --telegram-notifier-config-file=telegram-notifier-config.ini

[tool.ruff]
line-length = 120
# extend-exclude = [] # folders to exclude from formatting 

[dependency-groups]
lint = [
    "ruff (>=0.15.21,<0.16.0)",
    "mypy (>=2.3.0,<3.0.0)"
]