[project]
name = "rest-api-test-automation-advanced"
version = "0.1.0"
description = ""
authors = [
    {name = "Artsiom Kapset"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "aiohttp (==3.14.1)",
    "allure-pytest (==2.16.0)",
    "assertpy (==1.1)",
    "distconfig3 (==1.0.1)",
    "environs (==15.0.1)",
    "faker (==40.28.1)",
    "marshmallow (==4.3.0)",
    "pydantic (==2.13.4)",
    "pyhamcrest (==2.1.0)",
    "pytelegrambotapi (==4.34.0)",
    "pytest (==9.1.0)",
    "pytest-telegram-notifier (==1.4.0)",
    "python-dotenv (==1.2.2)",
    "pyyaml (==6.0.3)",
    "retrying (==1.4.2)",
    "rootpath (==0.1.0)",
    "setuptools (==83.0.0)",
    "structlog (==26.1.0)",
    "swagger-coverage (==3.5.2)",
    "toml (==0.10.2)",
    "vyper-config (==1.2.1)",
    "watchdog (==6.0.0)",
    "six (==1.17.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "curlify2 (>=2.0.0,<3.0.0)",
    "rest-client @ git+https://github.com/SDET-org/rest_client.git@main",
    "restcodegen (>=2.0.1,<3.0.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
addopts = "--alluredir=allure-results"
# Telegram notifications (disabled by default; the plugin blocks when unconfigured):
#   --telegram-notifier
#   --telegram-notifier-config-file=telegram-notifier-config.ini

[tool.ruff]
line-length = 120
# extend-exclude = [] # folders to exclude from formatting

[tool.ruff.lint]
# Beyond ruff's defaults (E4/E7/E9/F):
#   I    - import sorting
#   UP   - pyupgrade: keeps annotations on modern syntax (list[x], x | None)
#   ANN  - flake8-annotations: requires annotations, and ANN401 bans bare `Any`
#          in signatures. ANN401 is the rule that stops `-> Any` from being an
#          easy way to silence the type checker.
#   B    - bugbear, SIM - simplify: common correctness/readability traps
select = ["E", "F", "I", "UP", "ANN", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Test functions return None by definition; annotating every one adds noise.
"tests/**" = ["ANN201"]
# restcodegen output is regenerated verbatim from codegen_templates/ on every run
# (see the regeneration procedure in README.md), so hand-fixing it is pointless —
# the fixes are overwritten. Ignore the codes the generator reproduces:
#   ANN401 - the `**kwargs: Any` httpx passthrough on every client method
#   UP009  - the `# coding: utf-8` header restcodegen emits
#   I001   - the generator's import order (not isort-sorted)
"clients/http/dm_api_account/**" = ["ANN401", "UP009", "I001"]
# restcodegen also (re)writes this package __init__ with the utf-8 header.
"clients/http/__init__.py" = ["UP009"]

[tool.mypy]
# Lives here rather than in mypy.ini so ruff and mypy share one config file.
python_version = "3.13"
files = ["."]
exclude = ["\\.venv"]

# --- Baseline: every function must be annotated, and bodies are checked ---
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

# --- The flags that make the annotations mean something ---
# Without these, mypy accepts `-> Any` and bare `dict` and reports success, so
# `Any` becomes the path of least resistance to a green build.
warn_return_any = true         # catches Any leaking out through a declared type
disallow_any_generics = true   # bare `dict` / `Callable` are implicitly Any-parameterised
warn_unused_ignores = true     # a `# type: ignore` that suppresses nothing is an error
warn_redundant_casts = true
no_implicit_optional = true
strict_equality = true
warn_unreachable = true

# Not enabled: disallow_untyped_calls / disallow_untyped_decorators.
# allure ships a py.typed marker but its own functions carry no annotations, so
# every @allure.step / @allure.title would error with no fix available on our
# side. These flags apply per calling module, so they cannot be scoped to allure
# alone. Revisit if allure ever annotates its API.

# Only these are genuinely missing stubs. Listing them explicitly instead of a
# global ignore_missing_imports keeps a typo in any other import an error.
[[tool.mypy.overrides]]
module = ["vyper.*", "curlify2.*", "swagger_coverage_py.*", "assertpy.*"]
ignore_missing_imports = true

# rest-client is now an external package (git dependency) and ships no py.typed
# marker, so mypy would treat it as Any and every client method call would leak
# Any out through a declared return type (warn_return_any). Its source *is* fully
# annotated, so follow_untyped_imports makes mypy read those real annotations
# instead — restoring the same guarantees the in-repo client used to give.
[[tool.mypy.overrides]]
module = ["restclient.*"]
follow_untyped_imports = true

[[tool.mypy.overrides]]
# pyhamcrest's stubs declare all_of/has_property as Matcher[Never], which makes
# correct matcher usage fail with arg-type. A stub defect, not a code defect.
module = ["checkers.*"]
disable_error_code = ["arg-type"]

[dependency-groups]
lint = [
    "ruff (>=0.15.21,<0.16.0)",
    "mypy (>=2.3.0,<3.0.0)",
    "pre-commit (>=4.6.0,<5.0.0)"
]
